Setting up react_on_rails to deploy on heroku

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "build:dev:client": "(cd client && npm run build:dev:client --silent)",
     "test": "rspec"
   },
+  "cacheDirectories": [
+  "node_modules",
+  "client/node_modules"
+  ],
   "dependencies": {
     "react-router": "^2.4.0"
   }
