--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
+    "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
